<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smartwatch Client</string>
    <string name="action_settings">Settings</string>
    <string name="show_location">My Location</string>
    <string name="title_activity_google_mapping">Google Maps</string>
    <string name="hello_world">Hello world!</string>
    <string name="show_profile">Patient Profile</string>
    <string name="panic">Panic</string>
    <string name="patientName">Name:</string>
    <string name="patientAge">Age:</string>
    <string name="patientAddress">Address:</string>
    <string name="medicalInformation">Medical Information:</string>
    <string name="emergencyContact">Emergency Contact:</string>
    <string name="battery">Battery Test</string>
    <string name="locating">Locating&#8230;</string>
    <string name="title_patient_profile_settings">Patient Profile Settings</string>
    <string name="title_hide_name">Hide Name</string>
    <string name="title_hide_age">Hide Age</string>
    <string name="title_hide_address">Hide Address</string>
    <string name="title_hide_medical_info">Hide Medical Information</string>
    <string name="title_hide_emergency_contacts">Hide Emergency Contacts</string>
    <string name="summ_hide_name">Check this box to hide Patient Name</string>
    <string name="summ_hide_age">Check this box to hide Patient Age</string>
    <string name="summ_hide_address">Check this box to hide Patient Address</string>
    <string name="summ_hide_medical_info">Check this box to hide Patient Medical Info</string>
    <string name="summ_hide_emergency_contacts">Check this box to hide Patient Emergency Contacts</string>
    <string name="title_activity_memory_game">Memory Game</string>
    <string name="start_memory_game">Memory Game</string>
    <string name="title_activity_calendar_reminder">Calendar Reminder</string>
    <string name="btn_set_reminder">Set Reminder</string>
    <string name="memgame_score">Score: </string>
    <string name="login">Login</string> 
  	<string name="retrieve_id">Retrieve</string> 
  	<string name="patient_id">Patient ID</string> 
  	<string name="password">Password</string>

</resources>
