<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/patientIdFieldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/passwordFieldTextView"
        android:text="@string/patient_id" />

    <EditText
        android:id="@+id/patientIdField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/patientIdFieldTextView"
        android:layout_marginTop="19dp"
        android:ems="10" />

    <TextView
        android:id="@+id/passwordFieldTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/patientIdField"
        android:layout_marginTop="47dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patientIdFieldTextView"
        android:layout_below="@+id/passwordFieldTextView"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_alignParentBottom="true"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnRetrieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/retrieve_id" />
    
    </RelativeLayout>