<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<TextView 
        android:id="@+id/text_view_patientName"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/patientName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/text_view_patientAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/patientName"
        android:layout_marginTop="14dp"
        android:text="@string/patientAge" />

    <EditText
        android:id="@+id/patientAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_view_patientAge"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/text_view_patientAdress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/patientAge"
        android:layout_marginTop="19dp"
        android:text="@string/patientAddress" />

    <EditText
        android:id="@+id/patientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_view_patientName"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/patientAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_view_patientAdress"
        android:ems="10"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/emergencyContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="53dp"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/text_view_emergencyContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emergencyContact"
        android:layout_alignParentLeft="true"
        android:text="@string/emergencyContact" />


        <requestFocus />

    <TextView
        android:id="@+id/text_view_medicalInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/medicalInformation" />
    
    <EditText
        android:id="@+id/medicalInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_view_medicalInformation"
        android:ems="10"
        android:inputType="textMultiLine"/>
    
</RelativeLayout>